<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payments">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/appbarcornflower" />

    <ImageView
        android:id="@+id/cardcornflower"
        android:layout_width="280dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/visa" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardcornflower"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cornflowercard" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardcornflower"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bottomsliderr" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Payments"
        android:textColor="@color/white"
        android:textSize="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.65" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/Menu" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_add_other_payment_method"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.85" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/num1"
        android:drawableRight="@drawable/ic_clear_black_24dp"
        android:alpha=".5"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/cardcornflower" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/muhammad_wajahat_hussain"
        android:drawableRight="@drawable/ic_clear_black_24dp"
        android:alpha=".5"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:drawableRight="@drawable/down_arrow"
        android:drawablePadding="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:alpha=".5"
        android:text="@string/rtr"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:drawableRight="@drawable/ic_clear_black_24dp"
        android:alpha=".5"
        android:text="@string/date0"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:alpha=".5"
        android:drawableRight="@drawable/ic_clear_black_24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/iii"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toEndOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.07" />

    <ImageView
        android:id="@+id/imageView0"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardcornflower"
        app:layout_constraintVertical_bias="0.74"
        app:srcCompat="@drawable/cornflowercard" />

    <EditText
        android:id="@+id/editText24"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="textPersonName"
        android:text="@string/add_new_payment_method"
        android:textSize="15sp"
        android:drawableRight="@drawable/add"
        android:alpha=".5"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView0"
        app:layout_constraintStart_toStartOf="@+id/imageView0"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

</androidx.constraintlayout.widget.ConstraintLayout>