<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_in">

    <ImageView
        android:id="@+id/bkgrnd"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bkgrnd" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bkgrnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bkgrnd"
        app:layout_constraintVertical_bias="0.14" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:alpha=".5"
        app:layout_constraintBottom_toBottomOf="@+id/bkgrnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bkgrnd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63"
        app:srcCompat="@drawable/whitecardrounded" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:alpha=".4"
        app:layout_constraintBottom_toBottomOf="@+id/bkgrnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bkgrnd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58000004"
        app:srcCompat="@drawable/whitecardrounded" />

    <ImageView
        android:id="@+id/imageView99"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/bkgrnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bkgrnd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:srcCompat="@drawable/whitecardrounded" />

    <Button
        android:id="@+id/button4"
        android:background="@drawable/whiteroundbutton"
        android:textColor="@color/purple"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:background="@drawable/greenroundbutton"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bkgrnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:layout_marginLeft="120sp"
        android:layout_marginRight="120sp"
        android:alpha=".6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bkgrnd"
        app:layout_constraintVertical_bias="0.99"
        app:srcCompat="@drawable/iphone_home" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_join_us"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView99"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView99"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_would_love_you_to_join_us"
        android:textColor="@color/green"
        android:textSize="10sp"
        android:alpha=".6"
        app:layout_constraintBottom_toBottomOf="@+id/imageView99"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.03000002" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView99"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView99"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/redsq" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView99"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView99"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/bluesq" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="20dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView99"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintStart_toStartOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@+id/imageView99"
        app:layout_constraintVertical_bias="0.21"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView99"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="@+id/imageView99"
        app:layout_constraintVertical_bias="0.21"
        app:srcCompat="@drawable/facebook" />

    <EditText
        android:id="@+id/editText21"
        android:layout_width="150sp"
        android:layout_height="30sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="7sp"
        android:textColor="@color/pinky"
        android:alpha=".4"
        android:text="@string/we_have_multiple_options_for_you_to_join_us"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/editText22"
        android:layout_width="240sp"
        android:layout_height="35sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/wajahatshiekh"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:drawablePadding="13sp"
        android:textSize="13sp"
        android:background="@drawable/btnbkgrnd"
        app:layout_constraintBottom_toBottomOf="@+id/imageView99"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/editText21"
        app:layout_constraintVertical_bias="0.20" />

    <EditText
        android:id="@+id/editText23"
        android:layout_width="240sp"
        android:layout_height="35sp"
        android:background="@drawable/btnbkgrnd"
        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
        android:drawablePadding="13sp"
        android:text="@string/mail"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView99"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/editText21"
        app:layout_constraintVertical_bias="0.422" />

    <EditText
        android:id="@+id/editText25"
        android:layout_width="240sp"
        android:layout_height="35sp"
        android:background="@drawable/btnbkgrnd"
        android:drawableLeft="@drawable/lock_green"
        android:drawablePadding="13sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/stars"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView99"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/editText21"
        app:layout_constraintVertical_bias="0.64" />

    <Button
        android:id="@+id/button"
        android:layout_width="90sp"
        android:layout_height="26sp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/imageView99"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/editText25"
        android:drawableLeft="@drawable/arrow_forward"
        android:padding="30dp" />


</androidx.constraintlayout.widget.ConstraintLayout>